clang/test/BSC/Negative/Trait/GenericTrait/define_trait_not_toplevel/define_trait_not_toplevel.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F<T> {};

int bar1() {
    trait F<T> {}; // expected-error {{trait is only allowed to be defined at top-level}}
                   // expected-error@-1 {{expected identifier or '('}}
}

int bar2<T>() {
    trait F<T> {}; // expected-error {{trait is only allowed to be defined at top-level}}
                   // expected-error@-1 {{expected identifier or '('}}
}

struct MyStruct1 {
    trait F<T> {}; // expected-error {{trait is only allowed to be defined at top-level}}
                   // expected-error@-1 {{type name requires a specifier or qualifier}}
                   // expected-error@-2 {{expected member name or ';' after declaration specifiers}}
                   // expected-error@-3 {{expected ';' at end of declaration list}}
                   // expected-error@-4 {{use of undeclared identifier 'T'}}
};

struct MyStruct2<T> {
    trait F<T> {}; // expected-error {{trait is only allowed to be defined at top-level}}
                   // expected-error@-1 {{type name requires a specifier or qualifier}}
                   // expected-error@-2 {{expected member name or ';' after declaration specifiers}}
                   // expected-error@-3 {{expected ';' at end of declaration list}}
};